changes done in the release branch

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-        <h1>Host: <!--#echo var="HOSTNAME" --></h1>
+        <h1>Host: cloudethix_release_nginx_haneef <!--#echo var="HOSTNAME" --></h1>
         Version: 1.1
 </body>
 </html>
